# TFG-Apple3D

./: LICENSE  README.md
c++/: CMakeLists.txt
c++/src/: geo_utils.cpp  gnss.cpp  imu.cpp  lidar.cu  main.cpp
c++/src/include/: geo_utils.hpp  gnss.hpp  imu.hpp  lidar.hpp
python/: requirements.txt
python/src/: compute_metrics.py  fix_gnss_files.py  main.py  read_rosbag.py  track_formation_GPS_2025.py  util.py
src/: config.py  correct_imu_yaw.py  main.py  read_rosbag.py  util.py
